--- a/myTaskList/index.html
+++ b/myTaskList/index.html
@@ -19,7 +19,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td><input type="text" id="nuevatarea" placeholder="Agregar tarea"></td>
+                    <td><input type="text" id="nuevatarea" placeholder="Add your task"></td>
                     <td class="right"><button class="btn-floating blue" id="buttonAdd" ><i class="material-icons">add</i></button></td>
                 </tr>
             </tbody>
